# WorkNexus

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  package-lock.json  package.json
apps/server/: conftest.py  openapi.json  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 081cc197c12d_identity_foundation_tenants_users_.py  23b3888b116f_workchat_conversations_messages_agent_.py  35d6bb78933b_work_items_tables_and_project_sequence.py  c3a7f1b9d2e4_skills_skill_invocations.py  f255da65bbd9_intake_intake_requests.py
apps/server/scripts/: e2e_reset_db.py
apps/server/src/worknexus/: __init__.py  api.py  config.py  db.py  main.py  mcp.py  openapi.py
apps/server/src/worknexus/core/: access.py  deps.py  envelope.py  errors.py  pagination.py  request_id.py  schemas.py
apps/server/src/worknexus/modules/audit/: models.py  router.py  schemas.py  service.py
apps/server/src/worknexus/modules/dashboards/: insights.py  mcp.py  router.py  schemas.py  service.py
apps/server/src/worknexus/modules/home/: router.py  schemas.py  service.py
apps/server/src/worknexus/modules/identity/: models.py  router.py  schemas.py  service.py
apps/server/src/worknexus/modules/intake/: deps.py  mcp.py  models.py  router.py  schemas.py  service.py  triage.py
apps/server/src/worknexus/modules/projects/: models.py  router.py  (+2 more)
apps/server/tests/: test_access_matrix.py  test_cors.py  test_identity_api.py  test_invites_api.py  test_mcp_http.py  test_me_api.py  test_migrations.py  test_projects_api.py  test_smoke.py  test_workchat_api.py
(+337 files in other folders)
