[project]
name = "worknexus"
version = "0.1.0"
description = "WorkNexus server: REST API (/api/v1) + MCP (/mcp) on a modular monolith"
authors = [
    { name = "yuehong136", email = "1365590480@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["worknexus"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests", "src"]
markers = [
    "p0: smoke, must pass on every CI run",
    "p1: core functionality",
    "p2: extended coverage",
    "integration: requires running PostgreSQL",
]
addopts = "--strict-markers --tb=short --color=yes"
